--- a/css/general.css
+++ b/css/general.css
@@ -1,14 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'made_tommy_light';
+    font-family: 'Outfit';
+}
+
+a {
+    text-decoration: none;
 }
 
 html, body {
     height: 100%;
     width: 100%;
     font-size: 10px;
+    overflow-x: hidden;
 }
 
 body {
@@ -23,14 +30,451 @@ header {
     height: 8vh;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 header svg {
     width: 4rem;
     height: 4rem;
+    transform: translateX(6px);
 }
-header .userProfile {
+header .home {
+    padding: 1rem;
+    display: inline-block;
     text-decoration: none;
-    font-size: 1.8rem;
+    transform: translate(-1rem, -1rem);
+    font-size: 2.2rem;
     color: #3783f5;
-    font-family: 'made_tommy_bold';
 }
+header a {
+    font-weight: 800;
+    height:fit-content;
+}
+
+/* HOME.CSS */
+.flex {
+    display: flex !important;
+}
+
+li {
+    list-style: none;
+}
+
+body {
+    padding: 1.7rem;
+    background: #f2f7ff;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+menu {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+menu input {
+    width: 100%;
+    height: 5rem;
+    padding: 0 1.8rem;
+
+    font-size: 1.6rem;
+    color: #7b7b7b;
+
+    outline: none;
+    border: none;
+    border-radius: 2rem;
+}
+menu input::placeholder {
+    color: #7b7b7b;
+}
+menu .dropdown-genres {
+    width: 9rem;
+    height: calc(100% - 5.5rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    font-size: 1.5rem;
+    color: #fff;
+
+    border-radius: 10rem;
+    background-color: #3783f5;
+}
+menu .dropdown-genres .genres-list {
+    display: none;
+
+    width: 34rem;
+    height: 44rem;
+    padding: 1.7rem;
+    position: absolute;
+    bottom: -44rem; left: 0;
+
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: .01rem;
+
+    
+    
+    color: #000;
+    background-color: #fff;
+    border: 1px solid #dfe4eb;
+    border-radius: 3rem;
+    z-index: 500;
+}
+menu .dropdown-genres .genres-list .category ul{
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    z-index: 500;
+}
+menu .dropdown-genres .genres-list .category ul li{
+    font-size: 1.6rem;
+}
+menu .dropdown-genres .genres-list h2 {
+    font-size: 1.4rem;
+    color: #3783f5;
+}
+
+main {
+    height: auto;
+    padding-top: 2rem;
+    color: #7b7b7b;
+    font-size: 1.2rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.category-slide {
+    position: relative;
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+.category-slide h2 {
+    font-weight: 400;
+}
+
+.slide-container {
+    width: 100vw;
+    height: auto;
+    padding-right: 2rem;
+    display: flex;
+    gap: 1rem;
+    overflow-x: auto;
+}
+.slide-container::-webkit-scrollbar {
+    display: none;
+}
+
+.scroll-btn {
+    width: 12vw;
+    height: 12vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 50%;
+
+    background-color: #fff;
+
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.scroll-btn svg {
+    width: 70%;
+
+}
+.right-btn {
+    right: 0;
+}
+
+.card {
+    width: 12rem;
+    height: 24rem;
+    padding: .5rem;
+
+    background-color: #fff;
+    border-radius: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+    gap: .4rem;
+}
+
+.card .bookCover-container {
+    width: 100%;
+    height: 17.2rem;
+    border-radius: 1.5rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card .bookCover-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card .info-container {
+    width: 100%;
+    height: 5.7rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.card .title-container {
+    width: 100%;
+    height: 3rem;
+} 
+.card .title-container h3 {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: #555;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+
+.card .priceAndStars-container {
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    
+}
+.card .priceAndStars-container .priceCard {
+    font-size: 1.5rem;
+    font-weight: 800;
+    color: #3783f5;
+}
+.card .priceAndStars-container .starsCard {
+    height: 100%;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: #000;
+    display: flex;
+    align-items: center;
+    gap: .3rem;
+    z-index: 200;
+}
+.card .priceAndStars-container .starsCard svg {
+    width: 18px;
+    height: 18px;
+    fill: none;
+    /* height: calc(100% - 1rem); */
+    /* transform: translateY(.4rem); */
+}
+
+/* LIBRO.CSS */
+.book-container {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.book-data {
+    width: 100%;
+    min-height: 80%;
+    height: auto;
+    padding: 1rem;
+
+    border-radius: 2rem;
+    background-color: #fff;
+}
+.book-data-first {
+    width: 100%;
+    height: 72%;
+
+    display: flex;
+    gap: 1rem;
+}
+.book-data-first .img-container {
+    min-width: 42%;
+    width: 45%;
+    height: 100%;
+    
+}
+.book-data-first .img-container img {
+    width: 100%;
+    aspect-ratio: 4/6;
+    border-radius: 1.5rem;
+}
+.book-data-first .info-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+.book-data-first .info-container .title-container{
+    width: 100%;
+    height: auto;
+}
+.book-data-first .info-container .title-container h1{
+    font-size: 2.4rem;
+    color: #257cff;
+    line-height: 2.4rem;
+}
+.book-data-first .info-container .autor-container{
+    font-family: system-ui;
+
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #7b7b7b;
+}
+.book-data-first .info-container .tags-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+.book-data-first .info-container .tags-container .tag {
+    max-width: 75%;
+    width: fit-content;
+    height: 3rem;
+    margin-top: .5rem;
+    padding: 1rem .8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-family: system-ui;
+    font-size: 1.2rem;
+    border-radius: 5rem;
+    color: #7b7b7b;
+    background-color: #f2f7ff;
+}
+.book-data-sec {
+    width: 100%;
+    max-width: 15rem;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+}
+.book-data-sec .price {
+    width: 45%;
+    font-size: 2rem;
+    font-weight: 700;
+    color: #257cff;
+}
+.book-data-sec .stars-container {
+    width: 5.2rem;
+    display: flex;
+    justify-content: space-between;
+}
+.book-data-sec .stars-container .stars {
+    font-size: 2rem;
+}
+.book-data-sec .stars-container svg {
+    width: 2.2rem;
+    height: 2.2rem;
+    fill: none;
+
+}
+.book-data .description-container {
+    width: 100%;
+    height: auto;
+    color: #7b7b7b;
+} 
+.book-data .description-container p {
+    font-size: 1.5rem;
+    margin-top: .5rem;
+} 
+.book-data-third {
+    width: 100%;
+    height: 3rem;
+    margin-top: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 10rem;
+    background-color: #f2f7ff;
+    font-size: 1.4rem;
+    color: #7b7b7b;
+}
+
+.buttons {
+    width: 100%;
+    height: 6rem;
+
+    display: flex;
+    gap: 1rem;
+}
+.buttons .pdf-button {
+    width: 40%;
+    height: 100%;
+    padding: .8rem;
+
+    display: flex;
+    border-radius: 2rem;
+    background-color: #fff;
+    text-decoration: none;
+}
+.buttons .pdf-button svg {
+    height: 100%;
+    width: 4.5rem;
+}
+.buttons .pdf-button .button-desc-container {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.buttons .pdf-button .button-desc-container span {
+    font-size: 1.5rem;
+    color: #7b7b7b;
+    line-height: 2.2rem;
+}
+.buttons .pdf-button .button-desc-container span b {
+    /* font-family: 'made_tommy_bold'; */
+    font-size: 3rem;
+    color: #e62323;
+}
+.buttons .wishList-button {
+    height: 100%;
+    padding: .8rem;
+    display: flex;
+    align-items: center;
+    flex: 1;
+
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #7b7b7b;
+
+    border-radius: 2rem;
+    background-color: #fff;
+}
+.buttons .wishList-button svg {
+    height: 100%;
+    width: 4rem;
+    fill: none;
+}
+
+@media (max-width: 350px) {
+    .book-data-first .info-container .title-container h1{
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+    .book-data-first {
+        gap: .5rem;
+    }
+}
+
+
