--- a/css/home.css
+++ b/css/home.css
@@ -1,27 +1,8 @@
-@font-face {
-    font-family: 'made_tommy_light';
-    src: url('../assets/fonts/made_tommy/MADE\ TOMMY\ Light_PERSONAL\ USE.otf');
-}
-@font-face {
-    font-family: 'made_tommy_bold';
-    src: url('../assets/fonts/made_tommy/MADE\ TOMMY\ Bold_PERSONAL\ USE.otf');
-}
-@font-face {
-    font-family: 'made_tommy';
-    src: url('../assets/fonts/made_tommy/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf');
-}
-@font-face {
-    font-family: 'nexa-heavy';
-    src: url('../assets/fonts/nexa/Nexa-Heavy.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'made_tommy_light';
+/*     font-family: 'made_tommy_light'; */
 }
 
 .flex {
@@ -45,24 +26,6 @@ body {
     background-size: cover;
 }
 
-header {
-    width: 100%;
-    height: 8vh;
-    display: flex;
-    justify-content: space-between;
-}
-header svg {
-    width: 4rem;
-    height: 4rem;
-    transform: translate(.7rem, -.3rem); 
-}
-header .userProfile {
-    text-decoration: none;
-    font-size: 1.8rem;
-    color: #3783f5;
-    font-family: 'made_tommy_bold';
-}
-
 menu {
     width: 100%;
     height: 15vh;
@@ -75,7 +38,7 @@ menu input {
     height: 5rem;
     padding: 0 1.8rem;
 
-    font-family: 'made_tommy';
+    /* font-family: 'made_tommy'; */
     font-size: 1.6rem;
     color: #7b7b7b;
 
@@ -95,7 +58,7 @@ menu .dropdown-genres {
     align-items: center;
     position: relative;
 
-    font-family: 'made_tommy';
+    /* font-family: 'made_tommy'; */
     font-size: 1.5rem;
     color: #fff;
 
@@ -132,7 +95,7 @@ menu .dropdown-genres .genres-list .category ul li{
     font-size: 1.6rem;
 }
 menu .dropdown-genres .genres-list h2 {
-    font-family: 'nexa-heavy';
+    /* font-family: 'made_tommy'; */
     font-size: 1.4rem;
     color: #3783f5;
 }
@@ -204,7 +167,7 @@ main {
     justify-content: center;
     align-items: center;
 
-    font-family: 'made_tommy_light';
+    /* font-family: 'made_tommy_light'; */
     border-radius: 5rem;
     background-color: #f2f7ff;
 }
@@ -218,7 +181,7 @@ main {
 }
 .card .priceAndStars-container .priceCard {
     font-size: 1.5rem;
-    font-family: 'made_tommy_bold';
+   /*  font-family: 'made_tommy_bold'; */
     color: #3783f5;
 }
 .card .priceAndStars-container .starsCard {
