--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,7 @@
-@font-face {
-    font-family: 'nexa-heavy';
-    src: url('../assets/fonts/nexa/Nexa-Heavy.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'made_tommy';
-    src: url('../assets/fonts/made_tommy/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf');
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'nexa-heavy';
 }
 
 html, body {
@@ -38,16 +26,18 @@ body {
 }
 .sub-container {
     width: 75%;
-    height: 60%;
+    height: 70%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     gap: 3rem;
 }
 h1 {
     font-size: 4.5rem;
+    font-weight: 700;
     line-height: 1;
     text-align: center;
     
@@ -66,26 +56,38 @@ h1 .underline {
     gap: 1rem;
 }
 .sign-container p {
-    font-family: 'made_tommy';
     font-size: 1.6rem;
 
     color: #fff;
 }
 .sign-container a {
-    width: 15rem;
-    height: 3.6rem;
+    width: 18rem;
+    height: 4rem;
     display: flex;
     justify-content: center;
     align-items: center; 
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    font-weight: 600;
     color: #3783f5;
     
-    border-radius: 1rem;
+    border-radius: 1.4rem;
     background-color: #fff;
     text-decoration: none;
     cursor: pointer;
 }
+.withoutLogin {
+    width: 24rem;
+    height: 5rem;
+    margin-top: 3rem;
+    color: #fff;
+    font-size: 1.8rem;
+    border: solid 1px #f2f7ff;
+    border-radius: 1.8rem;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .icon {
     width: 50px;
     height: 50px;
