--- a/css/libro.css
+++ b/css/libro.css
@@ -1,26 +1,28 @@
-@font-face {
+/* @font-face {
     font-family: 'made_tommy_light';
     src: url('../assets/fonts/made_tommy/MADE\ TOMMY\ Light_PERSONAL\ USE.otf');
 }
 @font-face {
     font-family: 'made_tommy_bold';
     src: url('../assets/fonts/made_tommy/MADE\ TOMMY\ Bold_PERSONAL\ USE.otf');
-}
+} */
 
 .book-container {
-    border: solid;
     width: 100%;
     height: auto;
-    min-height: 40rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .book-data {
     width: 100%;
     min-height: 80%;
     height: auto;
-    padding: .5rem;
+    padding: 1rem;
 
-    border-radius: 1rem;
+    border-radius: 2rem;
     background-color: #fff;
 }
 .book-data-first {
@@ -28,7 +30,7 @@
     height: 72%;
 
     display: flex;
-    gap: .5rem;
+    gap: 1rem;
 }
 .book-data-first .img-container {
     min-width: 42%;
@@ -46,7 +48,7 @@
     flex-direction: column;
 }
 .book-data-first .info-container .title-container h1{
-    font-family: 'made_tommy_bold';
+    /* font-family: 'made_tommy_bold'; */
     font-size: 2.4rem;
     color: #257cff;
     line-height: 2.4rem;
@@ -61,7 +63,8 @@
 .book-data-first .info-container .tags-container {
     width: 100%;
     height: 2.2rem;
-} 
+    display: flex;
+}
 .book-data-first .info-container .tags-container .tag {
     max-width: 75%;
     width: fit-content;
@@ -77,9 +80,109 @@
     color: #7b7b7b;
     background-color: #f2f7ff;
 }
+.book-data-first .info-container .description-container {
+    width: 100%;
+    height: auto;
+    font-size: 1.4rem;
+    color: #7b7b7b;
+} 
+.book-data-first .info-container .description-container p {
+    margin-top: .5rem;
+} 
 .book-data-sec {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.book-data-sec .price {
+    width: 45%;
+    font-size: 2rem;
+    /* font-family: 'made_tommy_bold'; */
+    color: #257cff;
+}
+.book-data-sec .stars-container {
+    width: 5.2rem;
+    display: flex;
+    justify-content: space-between;
+}
+.book-data-sec .stars-container .stars {
+    font-size: 2rem;
+}
+.book-data-sec .stars-container svg {
+    width: 2.2rem;
+    height: 2.2rem;
+    fill: none;
 
 }
 .book-data-third {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    border-radius: 10rem;
+    background-color: #f2f7ff;
+    font-size: 1.4rem;
+    color: #7b7b7b;
+}
+
+.buttons {
+    width: 100%;
+    height: 6rem;
+
+    display: flex;
+    gap: 1rem;
+}
+.buttons .pdf-button {
+    width: 40%;
+    height: 100%;
+    padding: .8rem;
+
+    display: flex;
+    border-radius: 2rem;
+    background-color: #fff;
+    text-decoration: none;
+}
+.buttons .pdf-button svg {
+    height: 100%;
+    width: 4.5rem;
+}
+.buttons .pdf-button .button-desc-container {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.buttons .pdf-button .button-desc-container span {
+    font-size: 1.5rem;
+    color: #7b7b7b;
+    line-height: 2.2rem;
+}
+.buttons .pdf-button .button-desc-container span b {
+    /* font-family: 'made_tommy_bold'; */
+    font-size: 3rem;
+    color: #e62323;
+}
+.buttons .wishList-button {
+    height: 100%;
+    padding: .8rem;
+    display: flex;
+    align-items: center;
+    flex: 1;
+
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #7b7b7b;
+
+    border-radius: 2rem;
+    background-color: #fff;
+}
+.buttons .wishList-button svg {
+    height: 100%;
+    width: 4rem;
+    fill: none;
 }
