--- a/css/logIn-signUp.css
+++ b/css/logIn-signUp.css
@@ -41,25 +41,31 @@ input {
     color: #fff;
     outline: none;
 }
+input:-webkit-autofill {
+    -webkit-text-fill-color: #3783f5; /* Cambia el color del texto */
+}
 label {
     font-size: 1.8rem;
     color: #fff;
 }
 button {
-    width: 15rem;
-    height: 3.6rem;
-    font-size: 1.5rem;
+    width: 18rem;
+    height: 4rem;
+    margin-top: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
     color: #3783f5;
     
-    border-radius: 1rem;
+    border-radius: 1.4rem;
     background-color: #fff;
     border: none;
     cursor: pointer;
 }
 
 p, p a {
-    font-family: 'made_tommy';
     font-size: 1.6rem;
-
     color: #fff;
+}
+p a {
+    font-weight: 500;
 }
