--- a/admin/css/generalAdmin.css
+++ b/admin/css/generalAdmin.css
@@ -5,6 +5,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Outfit', 'roboto';
+    color: #7b7b7b;
+}
+
+a {
+    text-decoration: none;
 }
 
 html, body {
@@ -14,10 +19,16 @@ html, body {
 }
 
 body {
-    background: linear-gradient(#f2f7ff, #deecff 80%);
+    padding: 1.7rem;
+    background: linear-gradient(#f2f7ff, #e7f1ff 80%);
     background-attachment: fixed;
     background-size: cover;
     display: flex;
+    flex-direction: column;
+
+    position: relative;
+}
+.form-body {
     justify-content: center;
     align-items: center;
 }
@@ -72,7 +83,6 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-
     gap: 3rem;
 }
 .input-container {
@@ -112,3 +122,72 @@ button {
     border: none;
     cursor: pointer;
 }
+
+header {
+    width: 100%;
+    height: 8vh;
+    display: flex;
+    justify-content: flex-end;
+}
+header svg {
+    width: 4rem;
+    height: 4rem;
+    transform: translateX(6px);
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+main h2 {
+    font-size: 2rem;
+}
+main p {
+    font-size: 1.8rem;
+}
+main .admin-options {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+main .admin-options .option {
+    width: 100%;
+    height: 11.5rem;
+    padding: 1.2rem 1rem;
+    display: flex;
+    align-items: center;
+    gap: .7rem;
+
+    background-color: #dfe4eb;
+    border-radius: 2rem;
+}
+.option-icon, .option-icon svg {
+    width: 7rem;
+    height: 7rem;
+}
+.option-description {
+    display: flex;
+    flex-direction: column;
+}
+.option-description h3 {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.txt-green {
+    color: #00bf63;
+}
+.txt-yellow {
+    color: #ff914d;
+}
+.txt-red {
+    color: #e72323;
+}
+.txt-bold {
+    font-weight: 700;
+}
+
