--- a/css/general.css
+++ b/css/general.css
@@ -50,6 +50,18 @@ header a {
     height:fit-content;
 }
 
+footer {
+    margin-top: 1rem;
+    width: 100%;
+    height: 2rem;
+    text-align: center;
+
+    transform: translateY(1rem);
+}
+footer p {
+    font-size: 1.2rem;
+    color: #7b7b7b;
+}
 /* HOME.CSS */
 .flex {
     display: flex !important;
@@ -79,6 +91,7 @@ menu input {
     padding: 0 1.8rem;
 
     font-size: 1.6rem;
+    background-color: #fff;
     color: #7b7b7b;
 
     outline: none;
@@ -87,6 +100,7 @@ menu input {
 }
 menu input::placeholder {
     color: #7b7b7b;
+    font-weight: 400;
 }
 menu .dropdown-genres {
     width: 9rem;
