--- a/admin/css/generalAdmin.css
+++ b/admin/css/generalAdmin.css
@@ -178,6 +178,46 @@ main .admin-options .option {
     font-weight: 700;
 }
 
+/* NO AUTHORIZATION WINDOW */
+.noAuthorization-container {
+    width: 24rem;
+    height: 16.3rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.noAuthorization-container svg{
+    width: 6.8em;
+    height: 6.8rem;
+}
+.noAuthorization-container p{
+    font-size: 18px;
+    color: #7b7b7b;
+    text-align: center;
+}
+.noAuthorization-container a{
+    width: 15.2rem;
+    height: 3.2rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #3783f5;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    border-radius: 1rem;
+    
+}
+
 .txt-green {
     color: #00bf63;
 }
