--- a/css/index.css
+++ b/css/index.css
@@ -11,84 +11,166 @@ html, body {
 }
 
 body {
+    padding: 0;
+
     background: linear-gradient(#3783f5, #77adff);
     background-attachment: fixed;
     background-size: cover;
 }
 
 .main-container {
-    width: 100%;
-    height: 100%;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.sub-container {
-    width: 75%;
-    height: 70%;
+    padding: 5.6rem 3rem;
 
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    gap: 3rem;
+    gap: 2rem;
 }
-h1 {
-    font-size: 4.5rem;
-    font-weight: 700;
-    line-height: 1;
-    text-align: center;
-    
+
+.title-container {
+    display: flex;
+    justify-content: center;
+}
+.title-container h1 {
+    font-size: 4rem;
     color: #fff;
 }
-h1 .underline {
-    text-decoration: underline;
-    text-decoration-thickness: .5rem;
-    text-underline-offset: 5px;
+
+.form-container {
+
 }
-.sign-container {
-    width: 100%;
+form {
     display: flex;
     flex-direction: column;
+    gap: 2rem;
+}
+.labelInput-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+label {
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: #fff;
+}
+.input-container {
+    width: 100%;
+    height: 3.8rem;
+    padding: 0 1rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    
+    border-bottom: solid 1px #fff;
+}
+.input-container input {
+    width: 100%;
+    height: 100%;
+
+    font-size: 1.8rem;
+    font-weight: 400;
+    color: #fff;
+
+    border: none;
+    background: none;
+    outline: none;
+}
+.input-container input:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px transparent inset !important; /* Color de fondo forzado */
+    -webkit-text-fill-color: #fff !important; /* Color de texto forzado */
+    transition: background-color 5000s ease-in-out 0s; /* Hack para evitar cambios de fondo */
+  }
+.input-container input::placeholder {
+    font-weight: 200;
+    color: #BDE1FF;
+}
+.input-container .svg-container {
+    padding: 0.4rem 0.6rem;
+    position: relative;
+}
+.input-container .svg-container svg {
+    width: 1.7rem;
+    height: 1.7rem;
+}
+.input-container .svg-container .validationEye-container {
+    display: flex;
     align-items: center;
     gap: 1rem;
 }
-.sign-container p {
-    font-size: 1.6rem;
-
-    color: #fff;
+.input-container .svg-container .validationEye-container svg {
+    width: 1.7rem;
+    height: 1.7rem;
 }
-.sign-container a {
+.input-container .svg-container .requirements-container {
+    width: 21rem;
+    min-height: 2.8rem;
+    padding: 0.6rem 0.5rem;
+
+    position: absolute;
+    right: 0;
+
+    border: 1px solid #dfe4eb;
+    border-radius: 1rem;
+    background-color: #fff;
+
+    z-index: 100;
+    display: none;
+}
+.input-container .svg-container .requirements-container .requirements-element {
+    display: flex;
+    
+    font-size: 1.4rem;
+    font-weight: 200;
+}
+.requirements-element .svgRequirement-container svg {
+    width: 1.7rem;
+    height: 1.7rem;
+}
+#passwordEye {
+    width: 2rem;
+    height: 2rem;
+}
+.requirements-element span {
+    
+}
+
+.submitBtn-container {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+}
+.submitBtn-container button {
     width: 18rem;
     height: 4rem;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    font-size: 1.8rem;
-    font-weight: 600;
-    color: #3783f5;
-    
-    border-radius: 1.4rem;
-    background-color: #fff;
-    text-decoration: none;
-    cursor: pointer;
-}
-.withoutLogin {
-    width: 24rem;
-    height: 5rem;
-    margin-top: 3rem;
-    color: #fff;
-    font-size: 1.8rem;
-    border: solid 1px #f2f7ff;
-    border-radius: 1.8rem;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    background-color: #fff;
+    color: #3783f5;
+
+    border: none;
+    border-radius: 1rem;
 }
-.icon {
-    width: 50px;
-    height: 50px;
+.submitBtn-container p {
+    font-size: 16px;
+    font-weight: 200;
+    color: #fff;
 }
+.submitBtn-container p a {
+    font-weight: 600;
+    color: #fff;
+}
+
+/* Es una clase para togglear en contenedores que 
+alternan entre el none y el block o flex  */
+.display {
+    display: block !important;
+}
+
