--- a/css/index.css
+++ b/css/index.css
@@ -13,9 +13,15 @@ html, body {
 body {
     padding: 0;
 
+    position: relative;
+
     background: linear-gradient(#3783f5, #77adff);
     background-attachment: fixed;
     background-size: cover;
+}
+
+input[type="password"]::-ms-reveal {
+    display: none;
 }
 
 .main-container {
@@ -36,7 +42,7 @@ body {
 }
 
 .form-container {
-
+    
 }
 form {
     display: flex;
@@ -65,6 +71,8 @@ label {
     gap: 1rem;
     
     border-bottom: solid 1px #fff;
+    
+    transition: all .2s ease;
 }
 .input-container input {
     width: 100%;
@@ -79,10 +87,10 @@ label {
     outline: none;
 }
 .input-container input:-webkit-autofill {
-    box-shadow: 0 0 0px 1000px transparent inset !important; /* Color de fondo forzado */
-    -webkit-text-fill-color: #fff !important; /* Color de texto forzado */
+    box-shadow: 0 0 0px 1000px transparent inset !important; /* Color de fondo */
+    -webkit-text-fill-color: #fff !important; /* Color de texto */
     transition: background-color 5000s ease-in-out 0s; /* Hack para evitar cambios de fondo */
-  }
+}
 .input-container input::placeholder {
     font-weight: 200;
     color: #BDE1FF;
@@ -121,6 +129,7 @@ label {
 }
 .input-container .svg-container .requirements-container .requirements-element {
     display: flex;
+    gap: 0.5rem;
     
     font-size: 1.4rem;
     font-weight: 200;
@@ -128,15 +137,40 @@ label {
 .requirements-element .svgRequirement-container svg {
     width: 1.7rem;
     height: 1.7rem;
+
+   /*  display: flex;
+    align-items: center; */
+}
+.usernameInput-container {
+    position: relative;
+}
+.usernameInput-container .errorUsernameExists {
+    width: 20rem;
+    height: 6rem;
+    padding: 0 1rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #FFE2E2;
+    border: 1px solid #E72323;
+    border-radius: 1rem;
+
+    position: absolute;
+    bottom: -6rem;
+
+    display: none;
+}
+.usernameInput-container .errorUsernameExists span {
+    font-size: 17px;
+    font-weight: 300;
+    color: #7B7B7B;
 }
 #passwordEye {
     width: 2rem;
     height: 2rem;
 }
-.requirements-element span {
-    
-}
-
 .submitBtn-container {
     width: 100%;
     height: auto;
@@ -145,6 +179,8 @@ label {
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
+
+    position: relative;
 }
 .submitBtn-container button {
     width: 18rem;
@@ -158,6 +194,28 @@ label {
     border: none;
     border-radius: 1rem;
 }
+.submitBtn-container .errorSubmitMessage {
+    width: 27rem;
+    height: 5.6rem;
+    padding: 0.6rem 1rem;
+
+    text-align: center;
+    position: absolute;
+    bottom: -7rem;
+
+    background-color: #FFE2E2;
+    border: 1px solid #E72323;
+    border-radius: 1rem;
+
+    opacity: 0;
+    /* transition: opacity 1s ease; */
+   /*  animation: appear 2s ease; */
+}
+.submitBtn-container .errorSubmitMessage span {
+    color: #E72323;
+    font-size: 17px;
+    font-weight: 300;
+}
 .submitBtn-container p {
     font-size: 16px;
     font-weight: 200;
@@ -168,9 +226,211 @@ label {
     color: #fff;
 }
 
+.confirmEmailModal {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 0; left: 0;
+    background-color: #00000050;
+
+    display: none;
+}
+.confirmEmailModal_msgContainer {
+    width: 29.7rem;
+    min-height: 36.5rem;
+    height: auto;
+    padding: 1.5rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 18px;
+
+    position: relative;
+
+    color: #8D8D8D;
+    background-color: #fff;
+
+    border: 2px solid #7b7b7b;
+    border-radius: 1rem;
+}
+.confirmEmailModal_msgContainer .closeModal {
+    width: 3rem;
+    height: 3rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 0; right: 0;
+    cursor: pointer;
+}
+.confirmEmailModal_msgContainer .closeModal svg {
+    width: 2rem;
+    height: 2rem;
+
+    /* transform: translate(5px, -5px); */
+}
+.confirmEmailModal_msgContainer h2 {
+    font-size: 24px;
+    font-weight: 600;
+
+    text-align: center;
+    line-height: 24px;
+}
+.confirmEmailModal_msgContainer hr {
+    width: 20.2rem;
+    height: 2px;
+
+    position: absolute;
+    top: 7.5rem;
+
+    background-color: #D7D7D7;
+    color: #D7D7D7;
+    border: none;
+}
+.confirmEmailModal_msgContainer .mainMsg-container {
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    gap: 3rem; /**/
+
+    word-wrap: break-word;
+}
+.confirmEmailModal_msgContainer .mainMsg-container svg {
+    width: 6.2rem;
+    height: 6.2rem;
+}
+.loadingSvg {
+    width: 7rem;
+    height: 7rem;
+
+    animation: rotate 1s ease-in-out infinite;
+}
+.confirmEmailModal_msgContainer .mainMsg-container .subMainMsg-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.subMainMsg-container .msg1 {
+    text-align: center;
+    
+}
+.subMainMsg-container .msg1 span {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 22px;
+}
+.subMainMsg-container .msg2 {
+    padding: 1rem;
+}
+.subMainMsg-container .msg2 span {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.bottomOptions {
+    width: 100%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+.subBottomOptions {
+    display: flex;
+    align-items: flex-end;
+    gap: 1.8rem;
+}
+.subBottomOptions span {
+    font-size: 14px;
+    font-weight: 500;
+}
+.subBottomOptions .btnResend-container {
+    display: flex;
+    align-items: flex-end;
+    gap: 1rem;
+}
+.subBottomOptions .btnResend-container .btnResend {
+    width: 8.8rem;
+    height: 3.4rem;
+
+    font-size: 14px;
+    font-weight: 500;
+    background-color: #E5E5E5;
+    color: #ABABAB;
+    border: none;
+    border-radius: 5px;
+}
+
+
+
+
+
+
 /* Es una clase para togglear en contenedores que 
 alternan entre el none y el block o flex  */
 .display {
     display: block !important;
 }
 
+.disabledLabel {
+    color: #BDE1FF;
+}
+.disabledInput {
+    border-bottom: solid 1px #BDE1FF;
+}
+
+.placeholderWhite::placeholder {
+    color: #BDE1FF !important;
+}
+.placeholderBlue::placeholder {
+    color: #3783f5 !important;
+}
+
+.noPointerEvents {
+    pointer-events: none;
+}
+
+.blueBold {
+    font-weight: 700;
+    color: #3783f5;
+}
+
+.greenColorFont {
+    color: #00BF63;
+}
+
+
+@keyframes appear {
+    20% {
+        opacity: 1;
+    }
+    60% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
