--- a/css/index.css
+++ b/css/index.css
@@ -24,14 +24,109 @@ input[type="password"]::-ms-reveal {
     display: none;
 }
 
+/* index.php */
+.indexMain-container {
+    width: 100%;
+    height: 100%;
+    padding: 5.6rem 3rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.indexMain-container .sub-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+
+}
+.indexMain-container .sub-container .sub-sub-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+}
+.indexMain-container .sub-container .sub-sub-container .welcome-title {
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+}
+.indexMain-container .sub-container .sub-sub-container .welcome-title h1 {
+    font-size: 48px;
+    font-weight: 700;
+    color: #fff;
+
+}
+.indexMain-container .sub-container .sub-sub-container .welcome-title svg {
+    width: 144px;
+    height: 57px;
+
+    position: absolute;
+    bottom: -5.4rem;
+
+    transform: rotateZ(-5deg);
+}
+.indexMain-container .sub-container .sub-sub-container .signs-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+.signs-container .sign-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+}
+.signs-container .sign-container p {
+    font-size: 18px;
+    font-weight: 300;
+    color: #fff;
+}
+.signs-container .sign-container a {
+    width: 18rem;
+    height: 4.5rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 18px;
+    font-weight: 600;
+    color: #3783f5;
+    background-color: #fff;
+    border-radius: 1.5rem;
+}
+
+.indexMain-container .sub-container .withoutLogin {
+    width: 25.7rem;
+    height: 6rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 20px;
+    font-weight: 300;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 1.5rem;;
+}
+
+/* signUp.php*/
+
 .main-container {
     padding: 5.6rem 3rem;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 2rem;
 }
-
 .title-container {
     display: flex;
     justify-content: center;
@@ -40,11 +135,17 @@ input[type="password"]::-ms-reveal {
     font-size: 4rem;
     color: #fff;
 }
-
 .form-container {
+    width: 100%;
     
+    display: flex;
+    justify-content: center;
 }
-form {
+
+.form-container form {
+    width: 100%;
+    max-width: 39.4rem;
+
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -137,9 +238,6 @@ label {
 .requirements-element .svgRequirement-container svg {
     width: 1.7rem;
     height: 1.7rem;
-
-   /*  display: flex;
-    align-items: center; */
 }
 .usernameInput-container {
     position: relative;
@@ -193,6 +291,8 @@ label {
 
     border: none;
     border-radius: 1rem;
+
+    cursor: pointer;
 }
 .submitBtn-container .errorSubmitMessage {
     width: 27rem;
@@ -222,7 +322,7 @@ label {
     color: #fff;
 }
 .submitBtn-container p a {
-    font-weight: 600;
+    font-weight: 500;
     color: #fff;
 }
 
@@ -240,6 +340,25 @@ label {
 
     display: none;
 }
+.confirmEmailModal_msgContainer_loading {
+    width: 18rem;
+    min-height: 18rem; 
+    height: auto;
+    padding: 1.5rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    gap: 18px;
+
+    position: relative;
+
+    color: #8D8D8D;
+    background-color: #fff;
+
+    border-radius: 2rem; 
+}
 .confirmEmailModal_msgContainer {
     width: 29.7rem;
     min-height: 36.5rem;
@@ -256,7 +375,7 @@ label {
     color: #8D8D8D;
     background-color: #fff;
 
-    border: 2px solid #7b7b7b;
+    /* border: 2px solid #7b7b7b; */
     border-radius: 1rem;
 }
 .confirmEmailModal_msgContainer .closeModal {
@@ -302,7 +421,6 @@ label {
     flex-direction: column;
     align-items: center;
     justify-content: center; 
-    gap: 3rem; /**/
 
     word-wrap: break-word;
 }
@@ -375,7 +493,129 @@ label {
     border-radius: 5px;
 }
 
+/* logIn.php */
+.logIn-container {
+    width: 100%;
+    height: 100%;
+}
+.logIn-container form .main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 9rem;
+}
+.logIn-container form .main-container .mainTop-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+.logIn-container form .main-container .mainTop-container .title-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+.logIn-container form .main-container .mainTop-container .title-container svg {
+    width: 93px;
+    height: 37px;
+}
+.logIn-container form .main-container .mainTop-container .title-container h1 {
+    font-size: 40px;
+    font-weight: 700;
 
+}
+.logIn-container form .main-container .mainTop-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+}
+.logIn-container form .main-container .mainTop-container .inputs-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.logIn-container form .main-container .mainTop-container .inputs-container div label {
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: 300;
+}
+.logIn-container form .main-container .mainTop-container .inputs-container div input {
+    width: 100%;
+    padding: 1rem;
+
+    background-color: transparent;
+    color: #fff;
+    font-size: 1.8rem;
+    font-weight: 400;
+
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #fff;
+}
+.logIn-container form .main-container .mainTop-container .inputs-container div input::placeholder {
+    color: #BDE1FF;
+    font-size: 1.8rem;
+    font-weight: 300;
+}
+.logIn-container form .main-container .mainTop-container .inputs-container div input:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px transparent inset !important; /* Color de fondo */
+    -webkit-text-fill-color: #fff !important; /* Color de texto */
+    transition: background-color 5000s ease-in-out 0s; /* Hack para evitar cambios de fondo */
+}
+.passwordField-container .passwordInput-container {
+    padding: 0 1rem;
+    display: flex;
+    align-items: center;
+
+    border-bottom: 1px solid #fff;
+}
+.passwordField-container .passwordInput-container #passwordInput {
+    padding: 1rem 0;
+    border: none;
+}
+.passwordField-container .passwordInput-container #eyeIcon {
+    width: 2rem;
+    height: 2rem;
+}
+.logIn-container form .main-container .submitBtn-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+
+    position: relative;
+}
+.logIn-container form .main-container .submitBtn-container p {
+    font-size: 16px;
+}
+.logIn-container form .main-container .submitBtn-container p a {
+    color: #fff;
+    text-decoration: none;
+}
+.logIn-container form .main-container .submitBtn-container .errorMsg-container {
+    width: 22.6rem;
+    min-height: 4.6rem;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    position: absolute;
+    top: -7rem;
+
+    font-size: 16px;
+    font-weight: 300;
+    color: #E72323;
+    background-color: #FFE2E2;
+    outline: 1px solid #E72323;
+    border-radius: 1rem;
+
+    opacity: 0;
+}
 
 
 
