Se permite que el usuario se pueda registrar correctamente

--- a/css/general.css
+++ b/css/general.css
@@ -1031,6 +1031,10 @@ main {
     color: #3783F5;
 }
 
+.display {
+    display: flex !important;
+}
+
 @keyframes appear {
     20% {
         opacity: 1;
